fix layout on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -71,3 +71,14 @@ a, a:hover {
   flex-direction: column;
   text-align: center;
 }
+
+@media screen and (max-width: 500px){
+  .container {
+      flex-direction: column;
+  }
+
+  .photo {
+    margin-right: 0;
+    margin-bottom: 1.5rem;
+  }
+}
